<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="384dp"
        android:layout_height="314dp"
        android:contentDescription="@string/login_Logo"
        android:scaleX="1.4"
        android:scaleY="1.4"
        app:srcCompat="@drawable/logo___local_marketplace__2__removebg_preview" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInButton"
        android:layout_width="266dp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@android:color/black"
        android:textColorHint="#8D6E63"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:enabled="false"
        tools:ignore="VisualLintButtonSize" />

    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_forgot_password"
        android:textColor="#0277BD" />
    <Button
        android:id="@+id/createAccountButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create New Account"
        android:textColor="@android:color/white"
        android:backgroundTint="#FB6767"
        android:layout_marginTop="24dp" />

</LinearLayout>
