<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:layout_margin="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imgListing"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/listing_image"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/imgListing"
            android:layout_marginStart="8dp"
            android:text="@string/Listing_title"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvTitle"
            android:layout_toEndOf="@id/imgListing"
            android:layout_marginStart="8dp"
            android:text="@string/Product_value"
            android:textColor="#E91E63"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvPrice"
            android:layout_toEndOf="@id/imgListing"
            android:layout_marginStart="8dp"
            android:text="@string/item_location"
            android:textSize="12sp"
            android:textColor="#666"/>

    </RelativeLayout>
</androidx.cardview.widget.CardView>
